--- a/feeder/CMakeLists.txt
+++ b/feeder/CMakeLists.txt
@@ -1,6 +1,11 @@
-include_directories(../gsl-lite/include)
-include_directories(../optional-lite/include)
-include_directories(..)
+get_filename_component(ONIKU_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
+set(GOOGLETEST_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/googletest/googletest/include)
+set(GSLLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/gsl-lite/include)
+set(OPTIONALLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/optional-lite/include)
+
+include_directories(${GSLLITE_INCLUDE_DIRS})
+include_directories(${OPTIONALLITE_INCLUDE_DIRS})
+include_directories(${ONIKU_ROOT_DIR})
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_library(feeder
@@ -8,7 +13,7 @@ add_library(feeder
   imagenet_iterator.cc
   )
 
-include_directories(../googletest/googletest/include)
+include_directories(${GOOGLETEST_INCLUDE_DIRS})
 add_executable(feeder_test
   data_iterator_test.cc
   imagenet_iterator_test.cc
