--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,11 @@
-include_directories(../gsl-lite/include)
-include_directories(../optional-lite/include)
-include_directories(..)
+get_filename_component(ONIKU_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
+set(GSLLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/gsl-lite/include)
+set(OPTIONALLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/optional-lite/include)
+
+include_directories(${GSLLITE_INCLUDE_DIRS})
+include_directories(${OPTIONALLITE_INCLUDE_DIRS})
+include_directories(${ONIKU_ROOT_DIR})
+include_directories(${CMAKE_BINARY_DIR}) # the root directory instead of `build/tools`
 
 include_directories(${CUDA_INCLUDE_DIRS})
 
@@ -10,6 +15,7 @@ add_library(oniku_tools
   compiler_flags.cc
   util.cc
   )
+add_dependencies(oniku_tools runtime_xcvm_pb_h)
 
 add_executable(dump dump.cc)
 target_link_libraries(dump
@@ -24,6 +30,7 @@ target_link_libraries(dump
 set_target_properties(dump PROPERTIES OUTPUT_NAME "dump")
 
 add_executable(run_onnx run_onnx.cc)
+add_dependencies(run_onnx runtime_xcvm_pb_h)
 target_link_libraries(run_onnx
   oniku_tools
   oniku_compiler
