--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,16 +1,31 @@
-add_custom_command(
-  OUTPUT gen_xcvm_ops.cc xcvm.pb.cc xcvm.pb.h gen_xcvm_ops.h xcvm_proto_util.cc xcvm_proto_util.h
-  COMMAND python3 gen_xcvm.py
-  MAIN_DEPENDENCY gen_xcvm.py
-  DEPENDS ../common/codegen_util.py)
+get_filename_component(ONIKU_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
+set(ONIKU_COMMON_DIR ${ONIKU_ROOT_DIR}/common)
+set(GOOGLETEST_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/googletest/googletest/include)
+set(GSLLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/gsl-lite/include)
+set(OPTIONALLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/optional-lite/include)
 
-include_directories(../gsl-lite/include)
-include_directories(../optional-lite/include)
-include_directories(..)
+add_custom_command(
+  OUTPUT
+    ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_ops.cc
+    ${CMAKE_CURRENT_BINARY_DIR}/xcvm.pb.cc
+    ${CMAKE_CURRENT_BINARY_DIR}/xcvm.pb.h
+    ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_ops.h
+    ${CMAKE_CURRENT_BINARY_DIR}/xcvm_proto_util.cc
+    ${CMAKE_CURRENT_BINARY_DIR}/xcvm_proto_util.h
+  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_xcvm.py --output-dir ${CMAKE_CURRENT_BINARY_DIR}
+  MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/gen_xcvm.py
+  DEPENDS ${ONIKU_COMMON_DIR}/codegen_util.py)
+add_custom_target(runtime_xcvm_pb_h DEPENDS xcvm.pb.h)
+add_custom_target(runtime_xcvm_proto_util_h DEPENDS xcvm_proto_util.h)
+
+include_directories(${GSLLITE_INCLUDE_DIRS})
+include_directories(${OPTIONALLITE_INCLUDE_DIRS})
+include_directories(${ONIKU_ROOT_DIR})
 include_directories(${CUDA_INCLUDE_DIRS})
+include_directories(${CMAKE_BINARY_DIR}) # the root build directory instead of `build/runtime`
 add_library(oniku_runtime
   chrome_tracing.cc
-  gen_xcvm_ops.cc
+  ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_ops.cc
   meminfo.cc
   ops/generic.cc
   ops/normalization.cc
@@ -19,14 +34,14 @@ add_library(oniku_runtime
   ops/sequence.cc
   xchainer.cc
   xcvm.cc
-  xcvm.pb.cc
+  ${CMAKE_CURRENT_BINARY_DIR}/xcvm.pb.cc
   xcvm_ops.cc
-  xcvm_proto_util.cc
+  ${CMAKE_CURRENT_BINARY_DIR}/xcvm_proto_util.cc
   xcvm_state.cc
   xcvm_var.cc
   )
 
-include_directories(../googletest/googletest/include)
+include_directories(${GOOGLETEST_INCLUDE_DIRS})
 add_executable(runtime_test
   xcvm_test.cc
   )
