Run the test for our own StatelessLSTM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ foreach(
     EspNet_Decoder
     MLP_with_loss
     MyLSTM
+    StatelessLSTM
     )
 
   gen_ch2o_test(model ${ch2o_test} "${ONIKU_TEST_ALL}")
