Run the test for EspNet's AttLoc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ endforeach()
 foreach(
     ch2o_test
     EspNet_AttDot
+    EspNet_AttLoc
     EspNet_BLSTM
     EspNet_Decoder
     MLP_with_loss
