--- a/feeder/CMakeLists.txt
+++ b/feeder/CMakeLists.txt
@@ -27,4 +27,8 @@ target_link_libraries(feeder_test
   ${OpenCV_LIBS}
   )
 
-add_test(NAME feeder_test COMMAND feeder_test)
+add_test(
+  NAME feeder_test
+  COMMAND feeder_test
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
