--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -61,5 +61,5 @@ target_link_libraries(runtime_test
 add_test(
   NAME runtime_test
   COMMAND runtime_test
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..
   )
