--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -42,7 +42,8 @@ add_library(oniku_compiler
   )
 add_dependencies(
   oniku_compiler
-  runtime_xcvm_pb_h runtime_xcvm_proto_util_h gen_node_base_h)
+  runtime_xcvm_pb_h runtime_xcvm_proto_util_h gen_node_base_h onnx_files
+  )
 
 include_directories(${GOOGLETEST_INCLUDE_DIRS})
 add_executable(compiler_test
