Implement gradient of LSTM
Now ChainerX should be updated to
0b7b66aeae32e0c026d9eecf1d757ceae538bbab or later.

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -24,6 +24,7 @@ include_directories(${ONIKU_ROOT_DIR})
 include_directories(${CUDA_INCLUDE_DIRS})
 include_directories(${CMAKE_BINARY_DIR}) # the root build directory instead of `build/runtime`
 add_library(oniku_runtime
+  backward_context.cc
   chrome_tracing.cc
   ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_ops.cc
   meminfo.cc
