Add runtime annotation by NVTX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,13 @@ else()
 endif()
 option(ONIKU_BUILD_CUDA "Build CUDA backend (if CUDA is available)" ${DEFAULT_ONIKU_BUILD_CUDA})
 
+if(DEFINED ENV{ONIKU_ENABLE_NVTX})
+    set(DEFAULT_ONIKU_ENABLE_NVTX $ENV{ONIKU_ENABLE_NVTX})
+else()
+    set(DEFAULT_ONIKU_ENABLE_NVTX OFF)
+endif()
+option(ONIKU_ENABLE_NVTX "Enable NVTX" ${DEFAULT_ONIKU_ENABLE_NVTX})
+
 option(ONIKU_GENERATE_TESTS "Generate tests for scripts/runtests.py" ON)
 
 if(${ONIKU_GENERATE_TESTS})
@@ -53,6 +60,12 @@ if(${ONIKU_BUILD_CUDA})
   find_package(CUDA REQUIRED)
   if(${CUDA_FOUND})
     add_definitions(-DONIKU_ENABLE_CUDA=1)
+    set(ONIKU_CUDA_LIBRARIES ${CUDA_CUDART_LIBRARY})
+    if(${ONIKU_ENABLE_NVTX})
+      add_definitions(-DONIKU_ENABLE_NVTX=1)
+      link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
+      set(ONIKU_CUDA_LIBRARIES ${ONIKU_CUDA_LIBRARIES} nvToolsExt)
+    endif()
   endif()
 endif()
 
