--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -59,7 +59,7 @@ target_link_libraries(runtime_test
   gtest
   gtest_main
   pthread
-  ${CUDA_CUDART_LIBRARY}
+  ${ONIKU_CUDA_LIBRARIES}
   )
 
 add_test(
