Implement ElementWiseNvrtc op with NVRTC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,13 @@ else()
 endif()
 option(ONIKU_ENABLE_NVTX "Enable NVTX" ${DEFAULT_ONIKU_ENABLE_NVTX})
 
+if(DEFINED ENV{ONIKU_ENABLE_NVRTC})
+    set(DEFAULT_ONIKU_ENABLE_NVRTC $ENV{ONIKU_ENABLE_NVRTC})
+else()
+    set(DEFAULT_ONIKU_ENABLE_NVRTC OFF)
+endif()
+option(ONIKU_ENABLE_NVRTC "Enable NVRTC" ${DEFAULT_ONIKU_ENABLE_NVRTC})
+
 option(ONIKU_GENERATE_TESTS "Generate tests for scripts/runtests.py" ON)
 
 if(${ONIKU_GENERATE_TESTS})
@@ -61,6 +68,11 @@ if(${ONIKU_BUILD_CUDA})
   if(${CUDA_FOUND})
     add_definitions(-DONIKU_ENABLE_CUDA=1)
     set(ONIKU_CUDA_LIBRARIES ${CUDA_CUDART_LIBRARY})
+    if(${ONIKU_ENABLE_NVRTC})
+      add_definitions(-DONIKU_ENABLE_NVRTC=1)
+      link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
+      set(ONIKU_CUDA_LIBRARIES ${ONIKU_CUDA_LIBRARIES} cuda nvrtc)
+    endif()
     if(${ONIKU_ENABLE_NVTX})
       add_definitions(-DONIKU_ENABLE_NVTX=1)
       link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
