--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,15 +97,15 @@ add_subdirectory(scripts)
 add_subdirectory(tools)
 
 add_custom_command(
-  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/onnx/build/libonnx.a onnx/build/onnx/onnx-ml.pb.h
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/onnx/build/libonnx.a ${CMAKE_CURRENT_SOURCE_DIR}/onnx/build/onnx/onnx-ml.pb.h
   COMMAND scripts/build_onnx.sh
   MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/.git/modules/onnx/index
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   )
 add_custom_target(onnx_files
   DEPENDS
-  onnx/build/libonnx.a
-  onnx/build/onnx/onnx-ml.pb.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/onnx/build/libonnx.a
+  ${CMAKE_CURRENT_SOURCE_DIR}/onnx/build/onnx/onnx-ml.pb.h
   )
 
 function(gen_ch2o_test dir ch2o_test all)
