Optionally link binaries against libcudnn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,13 @@ else()
 endif()
 option(ONIKU_BUILD_CUDA "Build CUDA backend (if CUDA is available)" ${DEFAULT_ONIKU_BUILD_CUDA})
 
+if(DEFINED ENV{ONIKU_ENABLE_CUDNN})
+    set(DEFAULT_ONIKU_ENABLE_CUDNN $ENV{ONIKU_ENABLE_CUDNN})
+else()
+    set(DEFAULT_ONIKU_ENABLE_CUDNN OFF)
+endif()
+option(ONIKU_ENABLE_CUDNN "Enable CUDNN" ${DEFAULT_ONIKU_ENABLE_CUDNN})
+
 if(DEFINED ENV{ONIKU_ENABLE_NVTX})
     set(DEFAULT_ONIKU_ENABLE_NVTX $ENV{ONIKU_ENABLE_NVTX})
 else()
@@ -68,16 +75,25 @@ if(${ONIKU_BUILD_CUDA})
   if(${CUDA_FOUND})
     add_definitions(-DONIKU_ENABLE_CUDA=1)
     set(ONIKU_CUDA_LIBRARIES ${CUDA_CUDART_LIBRARY})
+
+    if(${ONIKU_ENABLE_CUDNN})
+      add_definitions(-DONIKU_ENABLE_CUDNN=1)
+      link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
+      set(ONIKU_CUDA_LIBRARIES ${ONIKU_CUDA_LIBRARIES} cudnn)
+    endif()
+
     if(${ONIKU_ENABLE_NVRTC})
       add_definitions(-DONIKU_ENABLE_NVRTC=1)
       link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
       set(ONIKU_CUDA_LIBRARIES ${ONIKU_CUDA_LIBRARIES} cuda nvrtc)
     endif()
+
     if(${ONIKU_ENABLE_NVTX})
       add_definitions(-DONIKU_ENABLE_NVTX=1)
       link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
       set(ONIKU_CUDA_LIBRARIES ${ONIKU_CUDA_LIBRARIES} nvToolsExt)
     endif()
+
   endif()
 endif()
 
