--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ endif()
 enable_testing()
 
 add_definitions(-DONNX_ML=1)
+add_definitions(-DONNX_NAMESPACE=onnx)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
