Utilize variables obtained by FindCuDNN.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,8 +83,8 @@ if(${ONIKU_BUILD_CUDA})
       add_definitions(-DONIKU_ENABLE_CUDNN=1)
       find_package(CuDNN 7 REQUIRED)
       include_directories(${CUDNN_INCLUDE_DIRS})
-      link_directories(${CUDA_TOOLKIT_ROOT_DIR}/lib64)
-      set(ONIKU_CUDA_LIBRARIES ${ONIKU_CUDA_LIBRARIES} cudnn)
+      link_directories(${CUDNN_LIBRARY_DIRS})
+      set(ONIKU_CUDA_LIBRARIES ${ONIKU_CUDA_LIBRARIES} ${CUDNN_LIBRARIES})
     endif()
 
     if(${ONIKU_ENABLE_NVRTC})
