Implement a specific case of LSTM with cuDNN
This significantly improves the performance of EspNet's E2E.

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(oniku_runtime
   chrome_tracing.cc
   ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_ops.cc
   meminfo.cc
+  ops/cudnn_rnn.cc
   ops/generic.cc
   ops/normalization.cc
   ops/nvrtc.cc
