Set ONNX_API= to libonnx.a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,10 @@ add_custom_target(onnx_files
   DEPENDS
   ${CMAKE_CURRENT_BINARY_DIR}/onnx/onnx/onnx-ml.pb.h
   )
+# It seems `onnx` target compiles onnx*.pb.cc. As this will let other
+# files produce warnings, we suppress all warnings from ONNX by -w.
+target_compile_definitions(onnx PRIVATE ONNX_API=)
+target_compile_options(onnx PRIVATE -w)
 
 enable_testing()
 
