Make it possible to run a model from Python

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,8 +1,12 @@
+get_filename_component(ONIKU_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
+include_directories(${ONIKU_ROOT_DIR})
 include_directories(${PYTHON_INCLUDE_DIRS})
+include_directories(${CMAKE_BINARY_DIR})
 
 add_library(oniku.so MODULE oniku.cc)
 target_link_libraries(oniku.so
   PRIVATE
+  oniku_tools
   oniku_compiler
   oniku_runtime
   oniku_common
