Move xcvm_emitter to a subdirectory

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -45,7 +45,7 @@ add_library(oniku_compiler
   type_inference.cc
   util.cc
   value.cc
-  xcvm_emitter.cc
+  xcvm/emitter.cc
   )
 add_dependencies(
   oniku_compiler
@@ -61,7 +61,7 @@ add_executable(compiler_test
   model_test.cc
   scheduler_test.cc
   tensor_test.cc
-  xcvm_emitter_test.cc
+  xcvm/emitter_test.cc
   )
 add_dependencies(compiler_test runtime_xcvm_pb_h)
 target_link_libraries(compiler_test
