--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -55,6 +55,7 @@ add_executable(runtime_test
   )
 target_link_libraries(runtime_test
   oniku_runtime
+  oniku_common
   chainerx
   onnx_proto
   protobuf
